// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StudentHomePageComponent should snap when courses are still loading 1`] = `
<tm-student-home-page
  SortBy={[Function Object]}
  courseService={[Function CourseService]}
  courses={[Function Array]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  isCoursesLoading={[Function Boolean]}
  route={[Function ActivatedRoute]}
  sortBy="0"
  statusMessageService={[Function StatusMessageService]}
  studentFeedbackSessionStatusAwaiting={[Function String]}
  studentFeedbackSessionStatusClosed={[Function String]}
  studentFeedbackSessionStatusNotPublished={[Function String]}
  studentFeedbackSessionStatusPending={[Function String]}
  studentFeedbackSessionStatusPublished={[Function String]}
  studentFeedbackSessionStatusSubmitted={[Function String]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
>
  <tm-loading-spinner>
    <div
      class="loading-container"
    >
      <div
        class="row spinner-border text-primary"
        role="status"
      />
      <div
        class="row text-secondary"
      >
        Loading...
      </div>
    </div>
  </tm-loading-spinner>
</tm-student-home-page>
`;

exports[`StudentHomePageComponent should snap with all feedback sessions over 2 courses 1`] = `
<tm-student-home-page
  SortBy={[Function Object]}
  courseService={[Function CourseService]}
  courses={[Function Array]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  isCoursesLoading="false"
  route={[Function ActivatedRoute]}
  sortBy="0"
  statusMessageService={[Function StatusMessageService]}
  studentFeedbackSessionStatusAwaiting={[Function String]}
  studentFeedbackSessionStatusClosed={[Function String]}
  studentFeedbackSessionStatusNotPublished={[Function String]}
  studentFeedbackSessionStatusPending={[Function String]}
  studentFeedbackSessionStatusPublished={[Function String]}
  studentFeedbackSessionStatusSubmitted={[Function String]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
>
  <div /><div
    class="row mb-2"
  >
    <div
      class="col-12"
    >
      <div
        class="float-right"
      >
        <strong
          class="d-inline"
        >
           Sort By: 
        </strong>
        <div
          class="btn-group"
        >
          <button
            class="btn btn-light"
          >
            Course ID
          </button>
          <button
            class="btn btn-light"
          >
            Course Name
          </button>
        </div>
      </div>
    </div>
  </div><div
    class="card bg-light top-padded"
  >
    
    <div
      class="card-header bg-primary text-white"
    >
      <strong>
        [CS2103]: Software Engineering
      </strong>
      <span
        class="float-sm-right"
      >
        <a
          class="btn btn-light btn-sm button"
          href="/web/student/course?courseid=CS2103"
          ngbtooltip="View and edit information regarding your team"
          routerlink="/web/student/course"
        >
           View team 
        </a>
      </span>
    </div>
    <div
      class="table-responsive"
    >
      
      <table
        class="table table-striped table-bordered margin-0"
      >
        <thead>
          <tr>
            <th>
              Session Name
            </th>
            <th>
              Deadline
            </th>
            <th>
              Submissions
            </th>
            <th>
              Responses
            </th>
            <th>
              Action(s)
            </th>
          </tr>
        </thead>
        <tbody>
          
          <tr>
            
            <td>
              First Session
            </td>
            
            <td>
              Sat, 02 Feb 2019, 16:15 PM +08
            </td>
            <td>
              <a
                style="border-bottom: 1px dashed black;"
              >
                 Submitted 
              </a>
            </td>
            <td>
              <a
                style="border-bottom: 1px dashed black;"
              >
                 Published 
              </a>
            </td>
            <td>
              <a
                class="btn btn-light btn-sm"
                href="/web/student/sessions/result?courseid=CS2103&fsname=First%20Session"
                ngbtooltip="View the submitted responses for this feedback session"
                routerlink="/web/student/sessions/result"
              >
                 View Responses 
              </a>
                 
              
              <a
                class="btn btn-light btn-sm disabled"
              >
                 Start Submission 
              </a>
              
              
              <a
                class="btn btn-light btn-sm"
                href="/web/student/sessions/submission?courseid=CS2103&fsname=First%20Session"
                ngbtooltip="Edit submitted feedback"
                routerlink="/web/student/sessions/submission"
              >
                 Edit Submission 
              </a>
              
              
            </td>
          </tr>
          <tr>
            
            <td>
              Second Session
            </td>
            
            <td>
              Sat, 02 Feb 2019, 16:15 PM +08
            </td>
            <td>
              <a
                style="border-bottom: 1px dashed black;"
              >
                 Pending 
              </a>
            </td>
            <td>
              <a
                style="border-bottom: 1px dashed black;"
              >
                 Not Published 
              </a>
            </td>
            <td>
              <a
                class="btn btn-light btn-sm disabled"
                href="/web/student/sessions/result?courseid=CS2103&fsname=Second%20Session"
                ngbtooltip="View the submitted responses for this feedback session"
                routerlink="/web/student/sessions/result"
              >
                 View Responses 
              </a>
                 
              
              
              <a
                class="btn btn-light btn-sm"
                href="/web/student/sessions/submission?courseid=CS2103&fsname=Second%20Session"
                ngbtooltip="Start submitting feedback"
                routerlink="/web/student/sessions/submission"
              >
                 Start Submission 
              </a>
              
              
              
            </td>
          </tr>
        </tbody>
      </table>
      
    </div>
  </div><div
    class="card bg-light top-padded"
  >
    
    <div
      class="card-header bg-primary text-white"
    >
      <strong>
        [CS2102]: Databases
      </strong>
      <span
        class="float-sm-right"
      >
        <a
          class="btn btn-light btn-sm button"
          href="/web/student/course?courseid=CS2102"
          ngbtooltip="View and edit information regarding your team"
          routerlink="/web/student/course"
        >
           View team 
        </a>
      </span>
    </div>
    <div
      class="table-responsive"
    >
      
      <table
        class="table table-striped table-bordered margin-0"
      >
        <thead>
          <tr>
            <th>
              Session Name
            </th>
            <th>
              Deadline
            </th>
            <th>
              Submissions
            </th>
            <th>
              Responses
            </th>
            <th>
              Action(s)
            </th>
          </tr>
        </thead>
        <tbody>
          
          <tr>
            
            <td>
              Third Session
            </td>
            
            <td>
              Sat, 02 Feb 2019, 16:15 PM +08
            </td>
            <td>
              <a
                style="border-bottom: 1px dashed black;"
              >
                 Submitted 
              </a>
            </td>
            <td>
              <a
                style="border-bottom: 1px dashed black;"
              >
                 Not Published 
              </a>
            </td>
            <td>
              <a
                class="btn btn-light btn-sm disabled"
                href="/web/student/sessions/result?courseid=CS2102&fsname=Third%20Session"
                ngbtooltip="View the submitted responses for this feedback session"
                routerlink="/web/student/sessions/result"
              >
                 View Responses 
              </a>
                 
              
              
              
              <a
                class="btn btn-light btn-sm"
                href="/web/student/sessions/submission?courseid=CS2102&fsname=Third%20Session"
                ngbtooltip="Edit submitted feedback"
                routerlink="/web/student/sessions/submission"
              >
                 Edit Submission 
              </a>
              
              
            </td>
          </tr>
          <tr>
            
            <td>
              Fourth Session
            </td>
            
            <td>
              Sat, 02 Feb 2019, 16:15 PM +08
            </td>
            <td>
              <a
                style="border-bottom: 1px dashed black;"
              >
                 Closed 
              </a>
            </td>
            <td>
              <a
                style="border-bottom: 1px dashed black;"
              >
                 Not Published 
              </a>
            </td>
            <td>
              <a
                class="btn btn-light btn-sm disabled"
                href="/web/student/sessions/result?courseid=CS2102&fsname=Fourth%20Session"
                ngbtooltip="View the submitted responses for this feedback session"
                routerlink="/web/student/sessions/result"
              >
                 View Responses 
              </a>
                 
              
              
              
              
              <a
                class="btn btn-light btn-sm"
                href="/web/student/sessions/submission?courseid=CS2102&fsname=Fourth%20Session"
                ngbtooltip="View submitted feedback"
                routerlink="/web/student/sessions/submission"
              >
                 View Submission 
              </a>
              
            </td>
          </tr>
        </tbody>
      </table>
      
    </div>
  </div>
</tm-student-home-page>
`;

exports[`StudentHomePageComponent should snap with default fields 1`] = `
<tm-student-home-page
  SortBy={[Function Object]}
  courseService={[Function CourseService]}
  courses={[Function Array]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  isCoursesLoading={[Function Boolean]}
  route={[Function ActivatedRoute]}
  sortBy="0"
  statusMessageService={[Function StatusMessageService]}
  studentFeedbackSessionStatusAwaiting={[Function String]}
  studentFeedbackSessionStatusClosed={[Function String]}
  studentFeedbackSessionStatusNotPublished={[Function String]}
  studentFeedbackSessionStatusPending={[Function String]}
  studentFeedbackSessionStatusPublished={[Function String]}
  studentFeedbackSessionStatusSubmitted={[Function String]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
>
  <tm-loading-spinner>
    <div
      class="loading-container"
    >
      <div
        class="row spinner-border text-primary"
        role="status"
      />
      <div
        class="row text-secondary"
      >
        Loading...
      </div>
    </div>
  </tm-loading-spinner>
</tm-student-home-page>
`;

exports[`StudentHomePageComponent should snap with no feedback sessions 1`] = `
<tm-student-home-page
  SortBy={[Function Object]}
  courseService={[Function CourseService]}
  courses={[Function Array]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  isCoursesLoading="false"
  route={[Function ActivatedRoute]}
  sortBy="0"
  statusMessageService={[Function StatusMessageService]}
  studentFeedbackSessionStatusAwaiting={[Function String]}
  studentFeedbackSessionStatusClosed={[Function String]}
  studentFeedbackSessionStatusNotPublished={[Function String]}
  studentFeedbackSessionStatusPending={[Function String]}
  studentFeedbackSessionStatusPublished={[Function String]}
  studentFeedbackSessionStatusSubmitted={[Function String]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
>
  <div /><div
    class="row mb-2"
  >
    <div
      class="col-12"
    >
      <div
        class="float-right"
      >
        <strong
          class="d-inline"
        >
           Sort By: 
        </strong>
        <div
          class="btn-group"
        >
          <button
            class="btn btn-light"
          >
            Course ID
          </button>
          <button
            class="btn btn-light"
          >
            Course Name
          </button>
        </div>
      </div>
    </div>
  </div><div
    class="card bg-light top-padded"
  >
    
    <div
      class="card-header bg-primary text-white"
    >
      <strong>
        [CS3281]: Thematic Systems
      </strong>
      <span
        class="float-sm-right"
      >
        <a
          class="btn btn-light btn-sm button"
          href="/web/student/course?courseid=CS3281"
          ngbtooltip="View and edit information regarding your team"
          routerlink="/web/student/course"
        >
           View team 
        </a>
      </span>
    </div>
    <div
      class="table-responsive"
    >
      
      
      <table
        class="table table-striped table-bordered margin-0"
      >
        <tbody>
          <tr>
            <th
              class="align-center white"
            >
               Currently, there are no open evaluation/feedback sessions in this course. When a session is open for submission you will be notified. 
            </th>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</tm-student-home-page>
`;
